# tiktok

./: .gitignore  README.md  polymarket_monitor.py  pyproject.toml  requirements.txt  run.py
src/toktok/: __init__.py  __main__.py  client.py  exceptions.py  main.py  okx_client.py  trading_loop.py
tests/: test_cli.py  test_client.py  test_okx.py  test_okx_client.py  test_smoke.py  test_trading_loop.py
tests/data/: btc-opton.json  index_tickers.json  mark_price.json  opt-summary.json
